--- a/src/app/components/todo-card/todo-card.component.html
+++ b/src/app/components/todo-card/todo-card.component.html
@@ -1,4 +1,4 @@
-<div class="flex items-center justify-center border-2 border-zinc-500 rounded-3xl py-10  ">
+<div class="flex items-center justify-center border-2 border-zinc-500 rounded-3xl py-10 px-4  ">
   <div class="flex items-center justify-between gap-8">
     <div class="info-card">
       <h3 class="font-bold text-zinc-200">Tasks Done</h3>
