--- a/src/app/components/input/input.component.html
+++ b/src/app/components/input/input.component.html
@@ -1,7 +1,7 @@
 <form (ngSubmit)="onAddTask()" class="flex justify-between w-full gap-8">
   <div class="w-full bg-zinc-900 rounded-2xl py-2 px-2">
     <input
-      class="w-full pl-4 bg-transparent text-zinc-400 text-base placeholder:text-zinc-400 focus:border-none focus:outline-none"
+      class="w-full pl-4 bg-transparent text-zinc-400 text-base placeholder:text-zinc-400 focus:border-none focus:outline-none option"
       type="text"
       placeholder="Adicione uma tarefa..."
       [(ngModel)]="task"
