--- a/src/app/components/todo-item/todo-item.component.html
+++ b/src/app/components/todo-item/todo-item.component.html
@@ -1,21 +1,36 @@
 <div
   class="flex justify-between items-center gap-4 p-4 border border-zinc-600 rounded-xl bg-zinc-900"
 >
-  <div class="flex items-center gap-4">
-    <div id="" class="w-6 h-6 rounded-full border-2 border-emerald-500">
-      <input id="checkTodo_{{ todo?.id }}" class="hidden" type="checkbox" />
+  <div class="w-full flex items-center gap-4">
+    <div
+      (click)="onChangeDoneTodo()"
+      class="w-6 h-6 rounded-full border-2 border-emerald-500"
+      [class.bg-emerald-500]="todo?.done"
+    >
+      <input class="hidden" type="checkbox" [(ngModel)]="todo!.done" />
     </div>
     <input
-      class="bg-transparent text-zinc-200 text-md font-bold placeholder:text-zinc-400 focus:border-none focus:outline-none"
-      value="{{ todo?.task }}"
+      class="w-full bg-transparent text-zinc-200 text-lg font-bold placeholder:text-zinc-400 focus:border-none focus:outline-none"
+      [class]="
+        todo?.done
+          ? ['text-zinc-400','line-through', 'decoration-2', 'decoration-emerald-500']
+          : ''
+      "
+      [(ngModel)]="todo!.task"
     />
   </div>
 
   <div class="flex items-center gap-2 text-zinc-400">
-    <button (click)="editTask()">
+    <button
+      (click)="onEditTask()"
+      class="ease-in duration-300 hover:-translate-y-1 hover:text-yellow-500"
+    >
       <span class="material-symbols-outlined"> edit </span>
     </button>
-    <button (click)="onDeleteTask()">
+    <button
+      (click)="onDeleteTask()"
+      class="ease-in duration-300 hover:-translate-y-1 hover:text-rose-500"
+    >
       <span class="material-symbols-outlined"> delete </span>
     </button>
   </div>
