--- a/src/app/components/todo-item/todo-item.component.html
+++ b/src/app/components/todo-item/todo-item.component.html
@@ -4,7 +4,7 @@
   <div class="w-full flex items-center gap-4">
     <div
       (click)="onChangeDoneTodo()"
-      class="w-6 h-6 rounded-full border-2 border-emerald-500"
+      class="w-7 h-6 rounded-full border-2 border-emerald-500"
       [class.bg-emerald-500]="todo?.done"
     >
       <input class="hidden" type="checkbox" [(ngModel)]="todo!.done" />
@@ -13,17 +13,25 @@
       class="w-full bg-transparent text-zinc-200 text-lg font-bold placeholder:text-zinc-400 focus:border-none focus:outline-none"
       [class]="
         todo?.done
-          ? ['text-zinc-400','line-through', 'decoration-2', 'decoration-emerald-500']
+          ? [
+              'text-zinc-400',
+              'line-through',
+              'decoration-2',
+              'decoration-emerald-500'
+            ]
           : ''
       "
+      (change)="onEditTask()"
       [(ngModel)]="todo!.task"
+      [disabled]="!isEditing"
     />
   </div>
 
   <div class="flex items-center gap-2 text-zinc-400">
-    <button
-      (click)="onEditTask()"
+    <button *ngIf="!todo?.done" 
+      (click)="changeIsEditing()"
       class="ease-in duration-300 hover:-translate-y-1 hover:text-yellow-500"
+      [class.text-yellow-500]="isEditing"
     >
       <span class="material-symbols-outlined"> edit </span>
     </button>
