--- a/src/app/components/todo/todo.component.html
+++ b/src/app/components/todo/todo.component.html
@@ -1,6 +1,12 @@
 <div class="flex flex-col items-center">
-  <div class="w-[600px] max-w-full flex flex-col items-center justify-center gap-8">
-    <app-todo-card class="w-full" [tasks]="tasks"></app-todo-card>
+  <div
+    class="w-[600px] max-w-full flex flex-col items-center justify-center gap-8"
+  >
+    <app-todo-card
+      class="w-full"
+      [tasks]="tasks"
+      [totalDoneTasks]="tasksDone"
+    ></app-todo-card>
 
     <app-input class="w-full" (addTask)="addTask($event)"></app-input>
     <app-todo-item
